# AJMUN_BG_quarto-public

./: .bgproject.json  .dockerignore  .env.example  .env.prod.example  .firebaserc.example  .gitignore  CONTENT_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  _quarto.yml  docker-compose.demo.yml  docker-compose.pdf.yml  docker-compose.prod.yml  docker-compose.yml  exclude_manifest.txt  firebase.json  index.qmd  package-lock.json  package.json  public_manifest.txt  pytest.ini
api/: main.py  pyproject.toml  pytest.ini
api/dependencies/: __init__.py  auth.py
api/models/: sync_state.py
api/routers/: __init__.py  auth.py  bibliography.py  build.py  covers.py  docs.py  fullpage.py  project.py  settings.py  sync.py  system.py
api/services/: __init__.py  activity_log.py  app_auth.py  build_runner.py  change_detector.py  chapter_ids.py  conflict_resolver.py  cover_service.py  cover_validator.py  docs_fetcher.py  file_safety.py  fullpage_service.py  google_auth.py  markdown_converter.py  project_store.py  public_errors.py  runtime_config.py  settings_service.py  sync_store.py  upload_validation.py
api/tests/: test_public_error_sanitization.py
api/tests/routers/: test_auth.py  test_build.py  test_docs.py  test_project_raw_config.py
api/tests/services/: __init__.py  test_activity_log.py  test_auth_security_defaults.py  test_build_runner.py  test_build_validation.py  test_docs_fetcher_image_download.py  test_google_credentials_dir.py  test_project_store.py  test_runtime_config.py  test_upload_validation.py
assets/: reader-ui.js  (+2 more)
(+455 files in other folders)
