[project]
name = "ajmun-bg-api"
version = "1.0.0"
description = "AJMUN Background Guide Editor - Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.149.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "itsdangerous>=2.2.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "ruamel.yaml>=0.17.0",
    # Used by Quarto post-render/build helper scripts invoked by the backend.
    "beautifulsoup4>=4.12.0",
    "pykakasi>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]
